<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/choose_username"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_account_username_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/choose_password"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_account_password_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm_password"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_account_passwordConfirm_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/email_address"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_account_email_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/font"
        android:textSize="18sp" />

    <Button
        android:id="@+id/create_account_submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@color/mainBackground"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/secondBackground"
        android:textSize="20sp" />
</LinearLayout>
